syntax = 'proto3';
package chat;
option go_package = "./chat";

//import "google/protobuf/empty.proto";
//import "google/protobuf/wrappers.proto";


message RegisterRequest{
    string username=1;
    string password=1;
}

message RegisterResponse{
    bool success=1;
    string message=2;

}


message LoginRequest{
    string username=1;
    string password=2;
}

message LoginResponse{
    bool success=1;
    string message =2;
    string token = 3;
}

message ValidateTokenRequest{
    string token=1;

}

message ValidateTokenResponse{
    bool success=1;
    string message=2;
}


message Response{
    int32 status = 1;
    string message = 2;
}

message JoinRequest{
    string name = 1;
}

message JoinResponse{
   Response response = 1;
}

message GetUser{
    int32 nothing = 1;
}

message SendUser{      // response of GetUser
    repeated string user = 1;
}
message SendRequest{        // send message
    string from    = 1;
    string to      = 2;
    string message = 3;
}
message Result{
    int32   id     = 1;
    string from    = 2;
    string to      = 3;
    string message = 4;
    string time    = 5;
}
message SendResponse{       //  response of send message
    Response response = 1;
    Result   result = 2;
}

message GetMessages{     // get message of 
    string user = 1;
}
message SendMessages{     // response of get message of
    Response response = 1;
    repeated Result message = 2;
}


service Chat{
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc Join  (JoinRequest) returns (JoinResponse);
    rpc Users (GetUser) returns (SendUser);
    rpc Message (GetMessages) returns (SendMessages);
    rpc Send (SendRequest) returns (SendResponse);
}